Fixed #2 #mobile-menu-list visibility

--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ body {
         top: 50px;
         left: 0;
         right: 0;
-        height: auto;
+        height: 100vh;
     }
 
     .mobile-menu-list ul {
